themes/hyde/static/css/hyde.css
/* ... */
.flex-ctn.blog-post {
  -webkit-flex-direction: column;
  flex-direction: column;
}

.bg-blue {
  background: -moz-linear-gradient(0deg, #000053 5%, #2965FF 95%); /* ff3.6+ */
  background: -webkit-gradient(linear, left top, right top, color-stop(5%, #000053), color-stop(95%, #2965FF)); /* safari4+,chrome */
  background: -webkit-linear-gradient(0deg, #000053 5%, #2965FF 95%); /* safari5.1+,chrome10+ */
  background: -o-linear-gradient(0deg, #000053 5%, #2965FF 95%); /* opera 11.10+ */
  background: -ms-linear-gradient(0deg, #000053 5%, #2965FF 95%); /* ie10+ */
  background: linear-gradient(90deg, #000053 5%, #2965FF 95%); /* w3c */
  height: 300px;
}

.bg-blue h1 {
  color: #fff;
  font-size: 1.9rem;
  font-weight: 300;
  text-align: center;
  text-transform: uppercase;
}

.bg-blue .btn-ctn {
  color: #fff;
  font-weight: 300;
  margin-top: 1rem;
  text-align: center;
}

.bg-blue .button {
  border-color: #fff;
  color: #fff;
}

.bg-blue .button:hover {
  background-color: #fff;
  color: #000053;
}

.aside {
  background-color: #ecf2f7;
  background-image: url('https://www.nuxeo.com/assets/imgs/X_GRID.png');
  background-repeat: no-repeat;
  padding-top: 80px !important;
}

.blog-section {
  margin: calc(-25px + 1rem) 0 0 -25px;
}

.blog-post {
  background-color: #fff;
  box-shadow: 0 1px 10px 0 #ccc;
  color: rgba(0,5,34,0.5);
  -webkit-flex: 1; /* Safari 6.1+ */
  -ms-flex: 1; /* IE 10 */
  flex: 1;
  margin: 25px 0 0 25px;
  min-width: 200px;
  padding: 1rem;
}

a.blog-post:hover {
  box-shadow: inset 0 1px 10px 0 #ccc;
  color: rgba(0,5,34,0.5);
}

.blog-post > div:first-child {
  font-size: .7rem;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.blog-post > div:last-child {
  font-size: .6rem;
}

.blog-post :not(.title) {
  font-weight: 400;
  letter-spacing: .05rem;
  text-transform: uppercase;
}

.blog-post hr {
  background-color: #ecf2f7;
  margin-top: 1rem;
}

.blog-post .title {
  color: #000522;
  flex-grow: 1;
  font-size: 1.3rem;
}

.home > div:last-child {
  text-align: center;
}

.home > div:last-child hr {
  margin-left: auto;
  margin-right: auto;
}

.home > div:last-child p {
  font-size: 1.6rem;
  font-weight: 300;
  letter-spacing: .1rem;
}

